--- a/src/index.css
+++ b/src/index.css
@@ -54,5 +54,72 @@
 }
 
 /* ==================================Slider CSS==================================== */
+.slick-dots {
+  position: absolute;
+  bottom: 18px !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
 
+.slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  cursor: pointer;
+  color: transparent;
+  border: 0;
+  border-radius: 50% !important;
+  outline: none;
+  background: #808080 !important;
+}
+
+.slick-dots li button:before {
+  font-family: "slick";
+  font-size: 14px !important;
+  line-height: 22px !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  content: "•";
+  text-align: center;
+  opacity: 1 !important;
+  color: #808080 !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-dots li.slick-active button:before {
+  opacity: 1 !important;
+  color: var(--color-Secondary2) !important;
+  background-color: white !important;
+  border-radius: 50% !important;
+}
+
+.slick-prev:before {
+  content: "" !important;
+}
+
+.slick-next:before {
+  content: "" !important;
+}
 /* ==================================Slider CSS==================================== */
