--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@
 }
 
 /* ==================================Slider CSS==================================== */
-.slick-dots {
+.bannerSlider .slick-dots {
   position: absolute;
   bottom: 18px !important;
   display: flex !important;
@@ -66,7 +66,32 @@
   list-style: none;
   text-align: center;
 }
-.slick-dots li {
+.employeeSlider .slick-dots {
+  position: absolute;
+  bottom: -60px !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.employeeSlider .slick-list {
+  padding: 50px !important;
+}
+.bannerSlider .slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+.employeeSlider .slick-dots li {
   position: relative;
   display: inline-block;
   width: 20px;
@@ -76,7 +101,21 @@
   cursor: pointer;
 }
 
-.slick-dots li button {
+.bannerSlider .slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  cursor: pointer;
+  color: transparent;
+  border: 0;
+  border-radius: 50% !important;
+  outline: none;
+  background: #808080 !important;
+}
+.employeeSlider .slick-dots li button {
   font-size: 0;
   line-height: 0;
   display: block;
@@ -91,7 +130,23 @@
   background: #808080 !important;
 }
 
-.slick-dots li button:before {
+.bannerSlider .slick-dots li button:before {
+  font-family: "slick";
+  font-size: 14px !important;
+  line-height: 22px !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  content: "•";
+  text-align: center;
+  opacity: 1 !important;
+  color: #808080 !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.employeeSlider .slick-dots li button:before {
   font-family: "slick";
   font-size: 14px !important;
   line-height: 22px !important;
@@ -108,18 +163,31 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.slick-dots li.slick-active button:before {
+.bannerSlider .slick-dots li.slick-active button:before {
+  opacity: 1 !important;
+  color: var(--color-Secondary2) !important;
+  background-color: white !important;
+  border-radius: 50% !important;
+}
+.employeeSlider .slick-dots li.slick-active button:before {
   opacity: 1 !important;
   color: var(--color-Secondary2) !important;
   background-color: white !important;
   border-radius: 50% !important;
 }
 
-.slick-prev:before {
+.bannerSlider .slick-prev:before {
   content: "" !important;
 }
 
-.slick-next:before {
+.bannerSlider .slick-next:before {
+  content: "" !important;
+}
+.employeeSlider .slick-prev:before {
+  content: "" !important;
+}
+
+.employeeSlider .slick-next:before {
   content: "" !important;
 }
 /* ==================================Slider CSS==================================== */
@@ -186,3 +254,31 @@
 }
 
 /* ==================================Cart CSS==================================== */
+
+/* ==================================Contact CSS==================================== */
+.inputAsteriks {
+  position: relative;
+}
+.inputAsteriks::after {
+  position: absolute;
+  content: "*";
+  top: 0;
+  right: 0;
+  color: #db4444;
+}
+/* ==================================Contact CSS==================================== */
+
+/* ==================================Our story CSS==================================== */
+.storyCardParent:hover .storyCardGrandChild {
+  background-color: white;
+  color: black;
+  transition: all;
+  transition-duration: 0.3s;
+}
+.storyCardParent:hover .storyCardChild {
+  background-color: #ffffff51;
+  color: black;
+  transition: all;
+  transition-duration: 0.3s;
+}
+/* ==================================Our story CSS==================================== */
